# gimg

./: .gitignore  CMakeLists.txt  compile_flags.txt
include/gimg/: cliparse.h  gimg.h  macros.h  pixel.h  serialize.h  stb_image.h  stb_image_write.h
src/: gimg.c  main.c  serialize.c  tmp.txt
